@@ -52,7 +52,11 @@ PMAKE_UDEB = \
 	CFLAGS="$(CFLAGS) -Os" \
 	NO_WERROR=1 NOGCCERROR=1 NOSHARED=NO NO_SHARED=NO \
 	DESTDIR="$(DESTDIR)-udeb" \
-	make -C src $(PMAKE_FLAGS) -DRESCUE=yes -DWITHOUT_JAIL
+	make -C src $(PMAKE_FLAGS) \
+	-DRESCUE=yes \
+	-DWITHOUT_JAIL \
+	-DWITHOUT_IPX_SUPPORT \
+	$(NULL)
 
 # for ppp
 PMAKE_FLAGS += -DPPP_NO_PAM -DPPP_NO_NAT -DPPP_NO_DES -DPPP_NO_SUID -DPPP_NO_ATM -DPPP_NO_RADIUS
